--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <nav class="page-nav">
                   <ul>
                       <li><a href="index.html">History</a></li>
-                      <li><a href="about.html">Variations</a></li>
+                      <li><a href="#variations">Variations</a></li>
                       <li><a href="contact.html">Full character set</a></li>
                       
                   </ul>
@@ -27,19 +27,20 @@
           <!-- Hero section -->
           <section class="hero">
                 <h3>Hero section</h3>
-                <h3>vwxyz</h3>
+                <h3>forma</h3>
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
           <section class="history"> 
             <h1>History of the font</h1>
-                <p>
-                    Forma DJR revives Forma, the stylish sans serif released in 1968 by the renowned type foundry Nebiolo and created by a team of Italian designers led by the inimitable Aldo Novarese. Publications designer Roger Black has admired the design for years, so he commissioned DJR to revive it for his 2O13 redesign of Hong Kong Tatler. Based on metal type found by Indra Kupferschmid, this interpretation captures the rounded corners, tapered stems, and subtle quirks that were byproducts of the printing process. With super-tight spacing in five optical sizes, this revival attempts to embody the peculiar collision of midcentury modernist precision and the smudgy realities of metal, ink, and paper.                </p>
+                <p>Forma DJR history
+
+Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
                 <h1>Supported Languages include:</h1>
                 <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
           </section>
 
-          <section class="variations">
+          <section id="variations">
             <h1>a breakdown of what can be changed on the variable font</h1>
           </section>
 
