Fixed nav bar and changed nav bar colors

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="navigation.css">
-    <title>Variable Type Specimen</title>
+    <title>Forma - Variable Font</title>
 </head>
 <body>
     <header>
-        <h1 class="logo">Font name</h1>
+        <h1 class="logo">Forma</h1>
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href="index.html">History</a></li>
+                      <li><a href="#history">History</a></li>
                       <li><a href="#variations">Variations</a></li>
-                      <li><a href="contact.html">Full character set</a></li>
+                      <li><a href="#alphabet">Full character set</a></li>
                       
                   </ul>
               </nav>
@@ -31,7 +31,7 @@
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
-          <section class="history"> 
+          <section id="history"> 
             <h1>History of the font</h1>
                 <p>Forma DJR history
 
@@ -44,7 +44,7 @@ Forma DJR is a revival of classic italian sans created by David Jonathan Ross, c
             <h1>a breakdown of what can be changed on the variable font</h1>
           </section>
 
-          <section class="alphabet">
+          <section id="alphabet">
             <h1>Full character set</h1>
             <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
             <p>1234567890</p>
