Exported Background SVGs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href="#history">History</a></li>
                       <li><a href="#variations">Variations</a></li>
+                      <li><a href="#axis">Axis</a></li>
+                      <li><a href="#history">History</a></li>
                       <li><a href="#alphabet">Full character set</a></li>
                       
                   </ul>
@@ -26,16 +27,23 @@
           </header>
           <!-- Hero section -->
           <section class="hero">
-                <h3>Hero section</h3>
-                <h3>forma</h3>
+                <h3>Forma DJR</h3>
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
+          
+  <section id="axis"> 
+    <h1>Axis</h1>
+        <p>
+          Slant
+          Weight
+          Optical size
+          Width
+        </p>
+  </section>
           <section id="history"> 
             <h1>History of the font</h1>
-                <p>Forma DJR history
-
-Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
+                <p>Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
                 <h1>Supported Languages include:</h1>
                 <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
           </section>
@@ -44,7 +52,7 @@ Forma DJR is a revival of classic italian sans created by David Jonathan Ross, c
             <h1>a breakdown of what can be changed on the variable font</h1>
           </section>
 
-          <section id="alphabet">
+          <section id="characters">
             <h1>Full character set</h1>
             <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
             <p>1234567890</p>
