--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                       <li><a href="#variations">Variations</a></li>
                       <li><a href="#axis">Axis</a></li>
                       <li><a href="#history">History</a></li>
-                      <li><a href="#alphabet">Full character set</a></li>
-                      
+                      <li><a href="#alphabet">Full character set</a></li> 
                   </ul>
               </nav>
        <label for="nav-checkbox" class="nav-checkbox-icon">
@@ -32,31 +31,42 @@
           <!-- Type history -->
 <section class="page-wrapper">
           
-  <section id="axis"> 
-    <h1>Axis</h1>
-        <p>
-          Slant
-          Weight
-          Optical size
-          Width
-        </p>
-  </section>
+          <section id="Variations"> 
+                <h2>Variations</h2>
+                <section class="formas">
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                <p> Forma DJR Forma DJR</p>
+                </section>
+          </section>
+
+          <section id="axis"> 
+          <h2>Axis</h2>
+                <p class="slant"> Slant </p>
+                <p class="weight"> Weight </p>
+                <p class="optical size"> Optical size </p>
+                <p class="width"> Width </p>
+          </section>
+
           <section id="history"> 
-            <h1>History of the font</h1>
+            <h2> HISTORY <h2>
+            <h2> FORMA DJR </h2>
                 <p>Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
                 <h1>Supported Languages include:</h1>
                 <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
           </section>
 
-          <section id="variations">
-            <h1>a breakdown of what can be changed on the variable font</h1>
-          </section>
-
           <section id="characters">
-            <h1>Full character set</h1>
+            <h2>Characters</h2>
             <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
             <p>1234567890</p>
-            <p>!@#$%^&*()</p>
+            <p>!@#$%^&*(){}\</p>
 
           </section>
 
@@ -64,7 +74,16 @@
           </section>
           <!-- Start of the footer -->
           <footer>
-            Footer content goes here
+            <section class="download_section">
+              <a href="https://djr.com/forma/" class="download">Download</a>           
+              </section>
+            <section class="footer_text">
+              <h2>Forma DJR</h2>
+              <p>Jane Mitchell Umass Dartmouth</p>
+              <p>AXD 254: Proffessor Lara Henderson</p>
+              <p>College of Visual and Preforming Arts</p>
+              <p>Insta: Janeymitch23</p>
+              </section>
           </footer>
 
 </body>
