--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Forma - Variable Font</title>
 </head>
 <body>
+  a font-family: 'Forma DJR'
     <header>
         <h1 class="logo">Forma</h1>
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
@@ -33,21 +34,12 @@
           
           <section id="Variations"> 
                 <h2>Variations</h2>
-                <section class="formas">
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                <p> Forma DJR Forma DJR</p>
-                </section>
+                <p class="repeat"> Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR  
+                </p>
           </section>
 
           <section id="axis"> 
-          <h2>Axis</h2>
+          <h2 class="axis_title">Axis</h2>
                 <p class="slant"> Slant </p>
                 <p class="weight"> Weight </p>
                 <p class="optical size"> Optical size </p>
@@ -77,8 +69,8 @@
             <section class="download_section">
               <a href="https://djr.com/forma/" class="download">Download</a>           
               </section>
+              <h2 class="footer_title">Forma DJR</h2>
             <section class="footer_text">
-              <h2>Forma DJR</h2>
               <p>Jane Mitchell Umass Dartmouth</p>
               <p>AXD 254: Proffessor Lara Henderson</p>
               <p>College of Visual and Preforming Arts</p>
