--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   a font-family: 'Forma DJR'
     <header>
-        <h1 class="logo">Forma</h1>
+        <h6 class="logo">Forma</h6>
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
@@ -27,35 +27,38 @@
           </header>
           <!-- Hero section -->
           <section class="hero">
-                <h3>Forma DJR</h3>
+                <h1>Forma DJR</h1>
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
           
           <section id="Variations"> 
-                <h2>Variations</h2>
-                <p class="repeat"> Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR  
-                </p>
+                <h5>Variations</h5>
+                <p class="repeat"> Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR Forma DJR</p>
+
           </section>
 
           <section id="axis"> 
-          <h2 class="axis_title">Axis</h2>
-                <p class="slant"> Slant </p>
-                <p class="weight"> Weight </p>
-                <p class="optical size"> Optical size </p>
-                <p class="width"> Width </p>
+          <h3 class="axis_title">Axis</h3>
+          <h6>There are 4 variable axis</h6>
+                <h4 class="slant"> Slant </h4>
+                <h4 class="weight"> Weight </h4>
+                <h4 class="optical_size"> Optical size </h4>
+                <h4 class="width"> Width </h4>
           </section>
 
           <section id="history"> 
-            <h2> HISTORY <h2>
-            <h2> FORMA DJR </h2>
-                <p>Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
-                <h1>Supported Languages include:</h1>
-                <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
+            <section class="history_title" ><h2> HISTORY <h2>
+            <h2> FORMA DJR </h2></section>
+                <section class="history_text">
+                  <p>Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
+                  <h6>Supported Languages include:</h6>
+                  <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
+              </section>
           </section>
 
           <section id="characters">
-            <h2>Characters</h2>
+            <h4>Characters</h4>
             <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
             <p>1234567890</p>
             <p>!@#$%^&*(){}\</p>
@@ -69,12 +72,9 @@
             <section class="download_section">
               <a href="https://djr.com/forma/" class="download">Download</a>           
               </section>
-              <h2 class="footer_title">Forma DJR</h2>
+              <h6 class="footer_title">Forma DJR</h6>
             <section class="footer_text">
-              <p>Jane Mitchell Umass Dartmouth</p>
-              <p>AXD 254: Proffessor Lara Henderson</p>
-              <p>College of Visual and Preforming Arts</p>
-              <p>Insta: Janeymitch23</p>
+              <p>Jane Mitchell Umass Dartmouth AXD 254: Professor Lara Henderson College of Visual and Preforming Arts Insta: Janeymitch23</p>
               </section>
           </footer>
 
