history section layout changes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </section>
 
           <section id="history"> 
-            <section class="history_title" ><h2> HISTORY <h2>
-            <h2> FORMA DJR </h2></section>
+            <h2 class="history_title_1"> HISTORY <h2>
+            <h2 class="history_title_2"> FORMA DJR </h2>
                 <section class="history_text">
                   <p>Forma DJR is a revival of classic italian sans created by David Jonathan Ross, conceptualised by Roger Black, and later added to by Ruggero Magrì. Forma was originally created by Aldo Novarese and his team of designers in 1968. It was based off of Helvetica and the neo-grotesque style sans serif type that appeared in the early 19th century. Novareses Forma eventually stopped being used in 1978 when Nebiolo ceased operations. Roger Black was inspired by the original Forma in metal type, and asked David Jonothan Ross to bring it back for his redesign of The Hong Kong Tatler magazine. Forma DJR was then released to the public in 2016.
                   <h6>Supported Languages include:</h6>
