--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
           <section id="characters">
             <h4 class="characters_title">Characters</h4>
-            <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-            <p>1234567890</p>
+            <div class="alphabet"><p>1234567890</p>
             <p>!@#$%^&*(){}\</p>
+            <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
+            </div>
           </section>
         
           <section class="download_section">
