added variation section text, added animations, footer changes.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
           
           <section id="Variations"> 
                 <h5>Variations</h5>
+                  <div class="forma_container">
+                    <p class="thin">Forma DJR <span class="black">Forma DJR</span></p>
+                    <p class="light">Forma DJR <span class="bold">Forma DJR</span></p>
+                    <p class="regular">Forma DJR <span class="semibold">Forma DJR</span></p>
+                    <p class="semibold">Forma DJR <span class="regular">Forma DJR</span></p>
+                    <p class="bold">Forma DJR <span class="light">Forma DJR</span></p>
+                    <p class="black">Forma DJR <span class="thin">Forma DJR</span></p>
+                    </div>
           </section>
 
           <section id="axis"> 
@@ -56,10 +64,9 @@
 
           <section id="characters">
             <h4 class="characters_title">Characters</h4>
-            <div class="alphabet"><p>1234567890</p>
-            <p>!@#$%^&*(){}\</p>
-            <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-            </div>
+            <p class="alphabet">1234567890</p>
+            <p class="alphabet">!@#$%^&*(){}\</p>
+            <p class="alphabet">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
           </section>
         
           <section class="download_section">
@@ -72,7 +79,10 @@
           <footer>
               <h6 class="footer_title">Forma DJR</h6>
             <section class="footer_text">
-              <p>Jane Mitchell Umass Dartmouth AXD 254: Professor Lara Henderson College of Visual and Preforming Arts Insta: Janeymitch23</p>
+              <p>Jane Mitchell Umass Dartmouth</p>
+              <p>AXD 254: Professor Lara Henderson</p>
+              <p> College of Visual and Preforming Arts</p>
+              <p> jmitchelljem23@gmail.com</p>
               </section>
           </footer>
 
