--- a/index.html
+++ b/index.html
@@ -78,12 +78,10 @@
           <!-- Start of the footer -->
           <footer>
               <h6 class="footer_title">Forma DJR</h6>
-            <section class="footer_text">
               <p>Jane Mitchell Umass Dartmouth</p>
               <p>AXD 254: Professor Lara Henderson</p>
               <p> College of Visual and Preforming Arts</p>
-              <p> jmitchelljem23@gmail.com</p>
-              </section>
+              <p><a href="mailto:jmitchelljem23@gmail.com">jmitchelljem23@gmail.com</a></p>
           </footer>
 
 </body>
