nav bar finished

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href="#variations">Variations</a></li>
+                      <li><a href="#Variations">Variations</a></li>
                       <li><a href="#axis">Axis</a></li>
                       <li><a href="#history">History</a></li>
-                      <li><a href="#alphabet">Full character set</a></li> 
+                      <li><a href="#characters">Full character set</a></li> 
                   </ul>
               </nav>
        <label for="nav-checkbox" class="nav-checkbox-icon">
