small history title change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </header>
           <!-- Hero section -->
           <section id="hero_section">
-                <h1>Forma DJR</h1>
+                <h1>Forma <span class="djr_title">DJR</span></h1>
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
